--- a/modules/web/themes/havana/components/table/table.scss
+++ b/modules/web/themes/havana/components/table/table.scss
@@ -399,10 +399,10 @@
   }
 
   .c-table-composition.has-top-panel {
-    padding-top: 28px;
+    padding-top: 31px;
 
     .c-table-top {
-      margin-top: -28px;
+      margin-top: -31px;
     }
   }
 }
